Fix upcoming events gap

--- a/styles/css/Slogan_UpcomingEvents.css
+++ b/styles/css/Slogan_UpcomingEvents.css
@@ -311,23 +311,25 @@ button {
 #upcoming_events_container {
   margin: 2rem 5rem 10rem;
   justify-content: space-between;
+  gap: 1rem;
 }
 
 #upcoming_events_content_left {
-  flex-basis: 60%;
+  flex-basis: 66%;
 }
 
 #upcoming_events_content_right {
-  flex-basis: 38%;
+  flex-basis: 34%;
 }
 
 #upcoming_events_content_right_SLOT1 {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 #upcoming_events_content_right_SLOT2 {
   display: flex;
   justify-content: space-between;
+  gap: 1rem;
 }
 
 #upcoming_events_content_right_SLOT1 img,
@@ -344,7 +346,7 @@ button {
 }
 
 #upcoming_events_content_right_SLOT2 img {
-  width: 45%;
+  width: 50%;
 }
 
 @media only screen and (max-width: 1024px) {
